--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,64 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a{
+  text-decoration: none;
+}
+
+/* These styles are created for examples,
+copy and paste them into the styled-components */
+
+.flex-container {
+  height:100vh;
+  width:100vw;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(120deg, mediumslateblue 0%, skyblue 30%, goldenrod 100%);
+}
+
+.styled-header {
+  text-shadow: black;
+  color: blueviolet;
+  font-weight: bolder;
+  font-size: 3rem;
+}
+
+.styled-button {
+  border: 0.25rem mediumpurple solid;
+  border-radius: 1rem;
+  text-align: center;
+  line-height: 5rem;
+  font-weight: bolder;
+  text-transform: uppercase;
+  height: 5rem;
+  margin-top: 0.5rem;
+  width: 10rem;
+  font-size: 1.2rem;
+  color: mediumpurple;
+  background-color: whitesmoke; 
+  transition: all 0.5s ease;
+}
+
+.styled-button:hover {
+  height: 5.5rem;
+  width: 11rem;
+  margin: 0;
+  width:12rem;
+  line-height: 5.5rem;
+  background-color: mediumpurple;
+  color: whitesmoke;
+}
+
+coolbackground {
+  /* To be created */
 }
