--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,6 @@ copy and paste them into the styled-components */
   color: whitesmoke;
 }
 
-coolbackground {
+.coolbackground {
   /* To be created */
 }
